--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
   <script>
     // Your web app's Firebase configuration
     var firebaseConfig = {
-      apiKey: "AIzaSyBdcdaWq1kxddjsiqyblp_mg5AGwM4CHm4",
-      authDomain: "firestore-scrolling-1.firebaseapp.com",
-      databaseURL: "https://firestore-scrolling-1.firebaseio.com",
-      projectId: "firestore-scrolling-1",
-      storageBucket: "firestore-scrolling-1.appspot.com",
-      messagingSenderId: "606390404360",
-      appId: "1:606390404360:web:e35f731be55e45fe87d8bd"
+      apiKey: "AIzaSyDuJe2w5Ptc1AwM-Us-kWb2jYJuCr6UTOw",
+    authDomain: "angularfire-54a57.firebaseapp.com",
+    databaseURL: "https://angularfire-54a57.firebaseio.com",
+    projectId: "angularfire-54a57",
+    storageBucket: "angularfire-54a57.appspot.com",
+    messagingSenderId: "160774038322",
+    appId: "1:160774038322:web:5325bf8caa01ee62cfad2b"
     };
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
